refactor: network adapter protocol (#8)