@@ -3,12 +3,12 @@ package me.micartey.jation.adapter.network;
 import lombok.Setter;
 import lombok.SneakyThrows;
 import me.micartey.jation.JationObserver;
-import me.micartey.jation.annotations.Distribution;
-import me.micartey.jation.interfaces.Function;
-import me.micartey.jation.interfaces.JationEvent;
 import me.micartey.jation.adapter.network.packets.PacketAcknowledge;
 import me.micartey.jation.adapter.network.packets.PacketInvokeMethod;
 import me.micartey.jation.adapter.network.serializer.Serializer;
+import me.micartey.jation.annotations.Distribution;
+import me.micartey.jation.interfaces.Function;
+import me.micartey.jation.interfaces.JationEvent;
 import me.micartey.jation.utilities.Base64;
 
 import java.net.*;
@@ -21,7 +21,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 public class UdpNetworkAdapter implements NetworkAdapter {
 
-    private static final ExecutorService RETRY_EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
+    private static final ExecutorService RETRY_EXECUTOR = Executors.newCachedThreadPool();
 
     private static final Serializer SERIALIZER = new Serializer();
     private static final int SOCKET_BUFFER_SIZE = 4096;
@@ -41,6 +41,7 @@ public class UdpNetworkAdapter implements NetworkAdapter {
         this.targetPorts = targetPorts;
     }
 
+    @SuppressWarnings("unused")
     public UdpNetworkAdapter(int port) {
         this(port, port);
     }
@@ -72,13 +73,6 @@ public class UdpNetworkAdapter implements NetworkAdapter {
                 new PacketAcknowledge(id),
                 PacketAcknowledge.class
         );
-
-//            PacketInvokeMethod invoke = SERIALIZER.deserialize(serializedPacket, PacketInvokeMethod.class);
-//            JationEvent<?> event2 = (JationEvent<?>) Base64.fromBase64(invoke.getEventData()).get();
-//            Object[] objects = (Object[]) Base64.fromBase64(invoke.getAdditionalObjects()).get();
-//            objects = Arrays.copyOf(objects, objects.length + 1);
-//            objects[objects.length - 1] = this;
-//            JationObserver.DEFAULT_OBSERVER.publish(event2, objects);
 
         switch(garantee) {
             case EXACTLY_ONCE -> {
@@ -145,7 +139,7 @@ public class UdpNetworkAdapter implements NetworkAdapter {
             /*
              * When invoke method packet is received, send an ack and wait for a confirmation
              */
-            if (parsedPacket instanceof PacketInvokeMethod invoke) {
+            else if (parsedPacket instanceof PacketInvokeMethod invoke) {
                 int ackId = invoke.getAckId();
 
                 this.tasks.put(ackId, (datagramPacket) -> {
